@@ -30,6 +30,8 @@
 
 #include <stdarg.h>
 
+#include "cssc-assert.h"
+
 #if defined(__GNUC__) \
 && !(defined(__APPLE__) && __GNUC__ == 3 && __GNUC_MINOR__ == 1)
 #pragma interface
